@@ -4,6 +4,7 @@ TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 
 v6.18.0 Apr 11 2015
 . (kfsone) #215 removed "AltItemName" table
+. (kfsone) #216 fixed a crash when using "direct" cleanly
 + Apr 09 2015: ~200 new systems
 
 v6.17.5 Apr 08 2015
